--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.szmirren</groupId>
 	<artifactId>vertx-generator</artifactId>
-	<version>1.0.0</version>
+	<version>2.0.0</version>
 	<packaging>jar</packaging>
 
 	<name>vertx-generator</name>
@@ -21,7 +22,6 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
-		<!-- CMEU依赖架包 -->
 		<!-- 日 志处理 -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -51,8 +51,8 @@
 		<!-- sqlserver驱动架包 -->
 		<dependency>
 			<groupId>com.microsoft.sqlserver</groupId>
-			<artifactId>sqljdbc4</artifactId>
-			<version>4.0</version>
+			<artifactId>mssql-jdbc</artifactId>
+			<version>6.4.0.jre8</version>
 		</dependency>
 		<!-- postgresql驱动架包 -->
 		<dependency>
