--- a/src/main/resources/config/log4j.properties
+++ b/src/main/resources/config/log4j.properties
@@ -1,4 +1,9 @@
-log4j.rootLogger = debug,info,err
+log4j.rootLogger = debug,Console,info,err
+
+#Console
+log4j.appender.Console=org.apache.log4j.ConsoleAppender
+log4j.appender.Console.layout=org.apache.log4j.PatternLayout
+log4j.appender.Console.layout.ConversionPattern=[%p] %-d{yyyy-MM-dd HH\:mm\:ss} --> %m --> %F:%L %n
 
 log4j.appender.info = org.apache.log4j.DailyRollingFileAppender
 log4j.appender.info.Encoding=UTF-8
@@ -7,7 +12,7 @@ log4j.appender.info.DatePattern = '-'yyyy-MM-dd'.log'
 log4j.appender.info.Append = true
 log4j.appender.info.Threshold = DEBUG
 log4j.appender.info.layout = org.apache.log4j.PatternLayout
-log4j.appender.info.layout.ConversionPattern = %-d{yyyy-MM-dd HH\:mm\:ss} --> %m%n---------------------->  at %l %n %n
+log4j.appender.info.layout.ConversionPattern = [%p] %-d{yyyy-MM-dd HH\:mm\:ss} --> %m --> %F:%L %n%n
 
 
 log4j.appender.err = org.apache.log4j.DailyRollingFileAppender
@@ -17,6 +22,6 @@ log4j.appender.err.DatePattern = '-'yyyy-MM-dd'.log'
 log4j.appender.err.Append = true
 log4j.appender.err.Threshold = ERROR
 log4j.appender.err.layout = org.apache.log4j.PatternLayout
-log4j.appender.err.layout.ConversionPattern = %-d{yyyy-MM-dd HH\:mm\:ss} --> %m%n---------------------->  at %l %n %n
+log4j.appender.err.layout.ConversionPattern = [%p] %-d{yyyy-MM-dd HH\:mm\:ss} --> %m --> %F:%L %n%n
 
 
