完成基本的单文件生成

--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,11 @@
 			<artifactId>fastjson</artifactId>
 			<version>1.2.7</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.freemarker</groupId>
+			<artifactId>freemarker</artifactId>
+			<version>2.3.23</version>
+		</dependency>
 		<!-- 自定义数据库驱动架包 -->
 		<!-- Oracle驱动架包 -->
 		<dependency>
